# alif_mp3player

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  toolchain-armclang.cmake  toolchain-gnu.cmake
RTE/: RTE_Components.h  RTE_Device.h  board.h
configs/lvgl/: lv_conf.h  lv_port.h
libs/: alif_dave2d-driver.cmake  alif_lvgl-dave2d.cmake  boardlib.cmake  cmsis-alif-dfp.cmake  cmsis-arm2d.cmake  cmsis-dsp.cmake  cmsis.cmake  common_app_utils.cmake  lvgl.cmake  lvgl.custom.cmake  minimp3.cmake
libs/CMSIS-alif-dfp/Alif_CMSIS/Include/: evtrtr.h
libs/CMSIS-alif-dfp/Alif_CMSIS/Source/: Driver_DMA.c  Driver_I2S.c
libs/CMSIS-alif-dfp/Device/common/include/: peripheral_types.h  pm_internal.h  system_utils.h
libs/CMSIS-alif-dfp/Device/core/M55_HE/source/: startup_M55_HE.c
libs/CMSIS-alif-dfp/Device/core/M55_HP/source/: startup_M55_HP.c
libs/CMSIS-alif-dfp/drivers/include/: sys_ctrl_dma.h
libs/CMSIS-alif-dfp/drivers/source/: i3c.c
libs/common_app_utils/: README.md
libs/common_app_utils/logging/: uart_tracelib.c  uart_tracelib.h
libs/minimp3/: minimp3.h  minimp3_test.c
linker_files/: M55_HE.sct  M55_HP.sct  gcc_M55_HE.ld  gcc_M55_HP.ld  gcc_M55_HP_TCM.ld
source/: main.c
source/GUI/: lv_demo_music.c  lv_demo_music_list.c  lv_demo_music_main.c  lv_demo_music_main.h
source/audio/: audio.c  audio.h  audio_sample.c  audio_sample.h  minimp3.c  mp3_sample.h  wm8904_driver.c  wm8904_driver.h
source/lvgl/: lv_port_disp.c  lv_port_disp.h
source/mpu/: mpu.c  mpu.h
